config/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world
  namespace: apps
  labels:
    k8s-app: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: hello-world
  template:
    metadata:
      name: hello-world
      labels:
        k8s-app: hello-world
    spec:
      containers:
        - name: hello-world
          image: <IMAGE>
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 10
          securityContext:
            privileged: false
          resources:
            limits:
              cpu: "200m"
            requests:
              cpu: "60m"
      restartPolicy: Always
      #lifecycle:
      # preStop:
      #  exec:
      #   command: ["sh", "-c", "sleep 10"]  #set prestop hook
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
